--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">SerialTerminal</string>
+    <string name="action_clear">Clear Text</string>
+    <string name="action_open">Open Device</string>
+    <string name="action_close">Close Device</string>
+    <string name="action_setting">Setting ...</string>
+    <string name="button_write">Write</string>
+    <string name="write_hint">CR : \\r, LF : \\n, bin : \\u0000</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
