--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
+    <string name="about_title">About</string>
     <string name="action_clear">Clear Text</string>
     <string name="action_open">Open Device</string>
     <string name="action_close">Close Device</string>
     <string name="action_setting">Settings &#8230;</string>
+    <string name="action_about">About &#8230;</string>
     <string name="button_write">Write</string>
     <string name="write_hint">CR : \\r, LF : \\n, bin : \\u0000</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="pref_serial_title">Serial Settings</string>
     <string name="pref_display_title">Display Settings</string>
     <string name="pref_serial_baudrate_title">Baud rate</string>
@@ -18,4 +18,8 @@
     <string name="pref_display_fontsize_title">Font size</string>
     <string name="pref_display_typeface_title">Typeface</string>
     <string name="pref_display_view_title">Display</string>
+    <string name="licenses">Open Source Licenses</string>
+    <string name="license_mit">MIT License</string>
+    <string name="license_lgpl">GNU Lesser General Public License</string>
+    <string name="library_usb_serial_for_android">Android USB host serial driver library</string>
 </resources>
