--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="about_title">About</string>
+    <string name="setting_title">Settings</string>
     <string name="action_clear">Clear Text</string>
     <string name="action_open">Open Device</string>
     <string name="action_close">Close Device</string>
